# icy-metadata

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  cliff.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
examples/: retry_on_failure.rs  seek.rs  stream.rs
src/: error.rs  headers.rs  lib.rs  parse.rs  reader.rs
tests/: test.rs
